fix member and pin endpoint
